#655: Code refactored to support ascending compilation with Java 9+.
UtilEnum removed because of sun.reflect deprecated packages.
Special tests coverage removed (switch with unknown enum).
Travis build updated.